Professional Design To be added: Progress Bar, Exercise Setup Page (w selection of number of questions)

--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,7 @@
       name="A simple app to learn French Vocabulary"
       content="A simple app to learn French Vocabulary"
     />
-    <title>French Vocabulator</title>
+    <title>French Vocabulary App</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
